bin/test/fixtures/public/fail/semantic/StringType.jmm
import static ioPlus.printHelloWorld(void) void;
class HelloWorld {
	public static void main(String[] args) {
		String a;
    	this.a;
    	a[1] = 2;
    	//this.insocket = insocket;
	}

	public String test(String args) {
    		return !(args + 1);
    }

    public String test2(String args) {

        	return args[1];
       }
}